[tool.poetry]
name = "yt-calculus"
version = "0.1.0"
description = ""
authors = ["renan <renanmath7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
